--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "bootstrap": "^4.3.0",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
+    "popper": "^1.0.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -44,5 +47,20 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 7.3.1.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thuvee0pan/basic-angular-todoApp.git"
+  },
+  "keywords": [
+    "Angular"
+  ],
+  "author": "THuvee pan",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/thuvee0pan/basic-angular-todoApp/issues"
+  },
+  "homepage": "https://github.com/thuvee0pan/basic-angular-todoApp#readme"
 }
